--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,18 @@
-//
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+
+body {
+   @apply bg-gray-100;
+}
+table.table-standard {
+
+   @apply px-4 py-2 border border-gray-500 table-fixed;
+
+   th, td {
+      @apply px-4 py-2;
+   }
+}
