--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11401,6 +11401,56 @@ video {
   z-index: auto;
 }
 
+body {
+  background-color: #f7fafc;
+  height: 100%;
+}
+
+body #app {
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  font-size: 1.875rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+label#get {
+  background-color: #2f855a;
+}
+
+label#pos {
+  background-color: #c05621;
+}
+
+label#put {
+  background-color: #6b46c1;
+}
+
+label#del {
+  background-color: #c53030;
+}
+
+.card {
+  background-color: #fff;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
