--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,3 +5,29 @@
 @tailwind components;
 
 @tailwind utilities;
+
+
+body {
+   @apply bg-gray-100 h-full;
+
+   #app {
+      @apply w-full h-full;
+   }
+}
+
+h1 { @apply text-3xl; }
+h2 { @apply text-2xl; }
+h3 { @apply text-xl; }
+
+h1,h2,h3, h4, h5, h6 {
+   @apply font-bold mb-2;
+}
+
+label#get { @apply bg-green-700; }
+label#pos { @apply bg-orange-700; }
+label#put { @apply bg-purple-700; }
+label#del { @apply bg-red-700; }
+
+.card {
+   @apply bg-white p-4 mb-6 shadow;
+}
